<resources>
    <string name="app_name">日历</string>
    <string name="lunar_format" formatted="false">%s %s</string>
    <string name="sun">日</string>
    <string name="mon">一</string>
    <string name="tues">二</string>
    <string name="wed">三</string>
    <string name="thur">四</string>
    <string name="fri">五</string>
    <string name="sat">六</string>
    <string name="lunar_first_day_of_month">初一</string>
    <string name="month">月</string>
    <string name="lunar_month_unit" formatted="false">%s月</string>
    <string name="lunar_year_unit" formatted="false">%s年</string>
    <string name="year_and_month_unit" formatted="false">%d年 %d月</string>
</resources>
