<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        style="@style/TextWeekNum"
        android:text="@string/sun"/>

    <TextView
        style="@style/TextWeekNum"
        android:text="@string/mon"/>

    <TextView
        style="@style/TextWeekNum"
        android:text="@string/tues"/>

    <TextView
        style="@style/TextWeekNum"
        android:text="@string/wed"/>

    <TextView
        style="@style/TextWeekNum"
        android:text="@string/thur"/>

    <TextView
        style="@style/TextWeekNum"
        android:text="@string/fri"/>

    <TextView
        style="@style/TextWeekNum"
        android:text="@string/sat"/>

</LinearLayout>